<?xml version="1.0" encoding="utf-8"?>
<!--relative layout for having the buttons at the bottom-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zs30.interactivequeryvisualizer.LookupViewActivity">
    <!-- linear layout wraps vertically the search field and the list of lookup views-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/buttons"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:focusable="true">
        <!--search field-->
        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e5e7e9"
            android:hint="@string/lookupview"
            android:inputType="textVisiblePassword"
            android:padding="12dp"
            android:textSize="18sp" />
        <!--list of lookup views-->
        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff" />
    </LinearLayout>
    <!--horizontal layout wrap for the buttons
    with equal widths-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <!--lookup view button-->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selected_main_button"
            android:text="@string/views"
            android:textColor="#FFFFFF" />
        <!--attributes button-->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onAttributeBtn"
            android:text="@string/attributes"
            android:textColor="#FFFFFF" />
        <!--filters button-->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onFilterBtn"
            android:text="@string/filters"
            android:textColor="#FFFFFF" />
        <!--table button-->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onTableBtn"
            android:text="@string/table"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</RelativeLayout>
