<?xml version="1.0" encoding="utf-8"?>
<!--relative layout for having the buttons at the bottom and
attribute and graphics type at the top of the screen-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zs30.interactivequeryvisualizer.AttributesGraphicsActivity">
    <!-- linear layout wraps vertically the spinners for
     choosing attributes, their labels and graphics type-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <!--label for attribute1-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e5e7e9"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:text="@string/select_attribute_1"
            android:textSize="18sp" />
        <!--spinner for selecting attribute1-->
        <Spinner
            android:id="@+id/spinnerAttribute1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="10dp" />
        <!--label for attribute2-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e5e7e9"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:text="@string/select_attribute_2"
            android:textSize="18sp" />
        <!--spinner for selecting attribute2-->
        <Spinner
            android:id="@+id/spinnerAttribute2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="10dp" />
        <!--divides the screen between the attribute and graphics type selections-->
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <!--label for graphics type-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e5e7e9"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:text="@string/graphics_type"
            android:textSize="18sp" />
        <!--spinner for selecting the type of graphics,
        values defined in the string.xml file-->
        <Spinner
            android:id="@+id/spinnerGraphicsType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="10dp"
            android:entries="@array/graphics_array" />
    </LinearLayout>
    <!--horizontal layout wrap for the buttons
    with equal widths-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <!--lookup view button-->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onViewsBtn"
            android:text="@string/views"
            android:textColor="#FFFFFF" />
        <!--attributes button-->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selected_main_button"
            android:text="ATTRG"
            android:textColor="#FFFFFF" />
        <!--filters button-->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onFilterBtn"
            android:text="@string/filters"
            android:textColor="#FFFFFF" />
        <!--graphics button-->
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onGraphicsBtn"
            android:text="@string/Graphics"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</RelativeLayout>
