<?xml version="1.0" encoding="utf-8"?>
<!--RootView that wraps all its child elements vertically-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e7e9"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".LoginActivity">
    <!--scroll for the page-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--vertical layout for the UI components-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fffffc"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">
            <!--login title-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/activity_padding"
                android:text="@string/login_form"
                android:textSize="@dimen/activity_padding" />
            <!--username field-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <!--password field-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <!--error message-->
            <TextView
                android:id="@+id/errorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text=""
                android:textColor="#e72705" />
            <!--login button-->
            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:background="@drawable/login_button"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>