<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zs30.interactivequeryvisualizer.FiltersActivity">
<!--contains all filters, makes them scrollable, when screen size is not enough-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons">

        <LinearLayout
            android:id="@+id/filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e5e7e9"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:text="Set single values"
                android:visibility="gone"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/filter_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/text_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e5e7e9"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:text="Set range numeric values"
                android:visibility="gone"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/filter_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/text_boolean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e5e7e9"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:text="Set boolean values"
                android:visibility="gone"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/filter_boolean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/filter_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:id="@+id/text_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e5e7e9"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="10dp"
                android:text="Sort and order"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sort by:"
                        android:textSize="16dip" />

                    <Spinner
                        android:id="@+id/spinnerSortByAttribute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dip" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:gravity="left"
                        android:text="Order:"
                        android:textSize="16dip" />

                    <Spinner
                        android:id="@+id/spinnerOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dip"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onViewsBtn"
            android:text="@string/views"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_attr_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onAttributeBtn"
            android:text="@string/attributes"
            android:textColor="#FFFFFF" />
        <Button
            android:id="@+id/button_attr_graphics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onAttributeGraphicsBtn"
            android:text="AttrG"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selected_main_button"
            android:text="@string/filters"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onTableBtn"
            android:text="@string/table"
            android:textColor="#FFFFFF" />
        <Button
            android:id="@+id/button_graphics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_button"
            android:onClick="onGraphicsBtn"
            android:textColor="#FFFFFF"
            android:text="@string/Graphics" />
    </LinearLayout>
</RelativeLayout>
